contact icons and redesign - resposive contact form

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
     <!---ILS NOUS FONT CONFIANCE-->
     <div class="container p-4 mb-5">
-      <h2 class="border-bottom mb-5">Ils nous font confiance</h2>
+      <h2 class="border-bottom text-uppercase mb-5">Ils nous font confiance</h2>
       <div id="brands" class="row">
         <div class="col align-items-center">
           <img src="./Images-brands/eloy.png" alt="eloy" height="80" />
