--- a/contact.html
+++ b/contact.html
@@ -245,7 +245,11 @@
     <!-- Footer -->
     <div class="container footer py-4">
       <div class="row">
-        <div class="col-lg-6 col-sm-12 my-2 ps-2 contact-text">
+        <!-- Contact Information -->
+        <div
+          class="col-lg-6 col-md-12 d-flex flex-column justify-content-end my-2"
+        >
+          <h2 class="text-uppercase mb-4">Contactez-nous</h2>
           <p class="lead mb-4">
             Donnez vie à vos projets avec SEVERCOFRA. Que ce soit pour
             construire votre maison de rêve, rénover un espace existant ou
@@ -253,44 +257,96 @@
             solutions personnalisées. Contactez-nous dès maintenant pour
             commencer !
           </p>
+
+          <!-- Email Section -->
+          <div class="container p-0">
+            <div
+              class="d-flex flex-column flex-md-row justify-content-md-between align-items-start"
+            >
+              <!-- Email Section -->
+              <div
+                class="d-flex align-items-center px-2 mb-3 mb-md-0 w-100 w-md-auto"
+              >
+                <i
+                  class="bi bi-envelope-fill me-3 contact-icon fs-3"
+                  style="color: #1d90b9"
+                ></i>
+                <div>
+                  <p class="mb-1 fw-semibold">Email :</p>
+                  <p class="mb-0">
+                    <a
+                      href="mailto:info@severcofra.be"
+                      class="footer-link"
+                      style="color: #1d90b9"
+                    >
+                      info@severcofra.be
+                    </a>
+                  </p>
+                </div>
+              </div>
+
+              <!-- Telephone Section -->
+              <div
+                class="d-flex align-items-center px-2 mb-3 mb-md-0 w-100 w-md-auto"
+              >
+                <i
+                  class="bi bi-telephone-fill me-3 contact-icon fs-3"
+                  style="color: #1d90b9"
+                ></i>
+                <div>
+                  <p class="mb-1 fw-semibold">Téléphone :</p>
+                  <p class="mb-0">
+                    <a
+                      href="tel:+32466448911"
+                      class="footer-link"
+                      style="color: #1d90b9"
+                    >
+                      0466/44.89.11
+                    </a>
+                  </p>
+                </div>
+              </div>
+
+              <!-- Address Section -->
+              <div class="d-flex align-items-center px-2 w-100 w-md-auto">
+                <i
+                  class="bi bi-geo-alt-fill me-3 contact-icon fs-3"
+                  style="color: #1d90b9"
+                ></i>
+                <div>
+                  <p class="mb-1 fw-semibold">Adresse :</p>
+                  <p class="mb-0">
+                    <a
+                      href="https://www.google.com/maps/place/W.A.+Mozartlaan+2,+1620+Drogenbos/@50.8105101,4.3019185,17z/data=!3m1!4b1!4m6!3m5!1s0x47c3c42af53d2867:0x73f70057853c853b!8m2!3d50.8105067!4d4.3044934!16s%2Fg%2F11jx33w382?entry=ttu"
+                      target="_blank"
+                      class="footer-link"
+                      style="color: #1d90b9"
+                    >
+                      W.A Mozartlaan 2, 1620 Drogenbos
+                    </a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="row col-lg-6 col-sm-12">
-          <div class="col my-2 contact-info">
-            <p class="fs-6">Email :</p>
-            <p class="fs-6">Téléphone :</p>
-            <p class="fs-6">Adresse :</p>
-          </div>
-
-          <div class="col my-2">
-            <p class="fw-normal fs-6">
-              <a
-                class="footer-link"
-                href="mailto: info@severcofra.be"
-                style="color: #1d90b9; text-decoration: none"
-              >
-                info@severcofra.be
-              </a>
-            </p>
-            <p class="fw-normal fs-6">
-              <a
-                class="footer-link"
-                href="tel:+32466448911"
-                style="color: #1d90b9; text-decoration: none"
-              >
-                0466/44.89.11
-              </a>
-            </p>
-            <p class="fw-normal fs-6">
-              <a
-                class="footer-link"
-                href="https://www.google.com/maps/place/W.A.+Mozartlaan+2,+1620+Drogenbos/@50.8105101,4.3019185,17z/data=!3m1!4b1!4m6!3m5!1s0x47c3c42af53d2867:0x73f70057853c853b!8m2!3d50.8105067!4d4.3044934!16s%2Fg%2F11jx33w382?entry=ttu"
-                target="_blank"
-                style="color: #1d90b9; text-decoration: none"
-              >
-                W.A Mozartlaan 2, 1620 Drogenbos
-              </a>
-            </p>
+        <!-- Google Map -->
+        <!-- Container that holds the map -->
+        <div
+          class="col-lg-6 col-md-12 my-2 d-flex justify-content-center align-items-center"
+        >
+          <!-- Centering container with flexbox -->
+          <div class="map-container">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2521.098904240589!2d4.3050469!3d50.810806199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c42af53d2867%3A0x73f70057853c853b!2sW.A.%20Mozartlaan%202%2C%201620%20Drogenbos!5e0!3m2!1sen!2sbe!4v1725126761833!5m2!1sen!2sbe"
+              width="100%"
+              height="300"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </div>
@@ -308,6 +364,11 @@
       </div>
     </footer>
     <!-- </footer> -->
+    <!-- Optional: Add Bootstrap Icons for a modern look -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
