add alt to images - seo improvement - links to trust logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="SEVERCOFRA offre des services de construction, rénovation et aménagement intérieur en Belgique. Découvrez notre expertise et contactez-nous pour vos projets."
+    />
+    <meta
+      name="keywords"
+      content="construction, rénovation, aménagement intérieur, Belgique"
+    />
+    <meta name="robots" content="index, follow" />
     <title>Severcofra : Le Savoir Faire</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -38,7 +47,7 @@
             <img
               class="logo-img d-flex"
               src="./Images/severcofra_s.png"
-              alt="logo severcofra navbar"
+              alt="logo severcofra bar de recherche"
             />
           </div>
           <div class="d-flex flex-grow-1 justify-content-end">
@@ -192,11 +201,7 @@
           </div>
         </div>
         <div class="col d-flex align-items-start">
-          <img
-            class="small-images"
-            src="./Images/house.png"
-            alt="chassis velux"
-          />
+          <img class="small-images" src="./Images/house.png" alt="Isolation" />
           <div>
             <h3 class="fw-bold mb-0 fs-4">Isolation</h3>
             <p>
@@ -210,7 +215,7 @@
           <img
             class="small-images"
             src="./Images/tile.png"
-            alt="chassis velux"
+            alt="Pose de sols"
           />
           <div>
             <h3 class="fw-bold mb-0 fs-4">Pose de sols</h3>
@@ -222,11 +227,7 @@
           </div>
         </div>
         <div class="col d-flex align-items-start">
-          <img
-            class="small-images"
-            src="./Images/tools.png"
-            alt="chassis velux"
-          />
+          <img class="small-images" src="./Images/tools.png" alt="Menuiserie" />
           <div>
             <h3 class="fw-bold mb-0 fs-4">Menuiserie</h3>
             <p>
@@ -240,7 +241,7 @@
           <img
             class="small-images"
             src="./Images/wardrobe.png"
-            alt="chassis velux"
+            alt="Placards sur mesure"
           />
           <div>
             <h3 class="fw-bold mb-0 fs-4">Placards sur mesure</h3>
@@ -254,7 +255,7 @@
           <img
             class="small-images"
             src="./Images/attic.png"
-            alt="chassis velux"
+            alt="Aménagement de grenier"
           />
           <div>
             <h3 class="fw-bold mb-0 fs-4 services">Aménagement de grenier</h3>
@@ -269,7 +270,7 @@
           <img
             class="small-images"
             src="./Images/wall.png"
-            alt="chassis velux"
+            alt=">Pose de cloisons/faux plafonds"
           />
           <div>
             <h3 class="fw-bold mb-0 fs-4">Pose de cloisons/faux plafonds</h3>
@@ -291,7 +292,7 @@
                 <img
                   class="small-images"
                   src="./Images/paint-roller.png"
-                  alt="rénovation complète"
+                  alt="Peinture"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Peinture</h3>
@@ -306,7 +307,7 @@
                 <img
                   class="small-images"
                   src="./Images/electric.png"
-                  alt="rénovation complète"
+                  alt="Electricité"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Electricité</h3>
@@ -321,7 +322,7 @@
                 <img
                   class="small-images"
                   src="./Images/house-heat.png"
-                  alt="rénovation complète"
+                  alt="Chauffage"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Chauffage</h3>
@@ -335,7 +336,7 @@
                 <img
                   class="small-images"
                   src="./Images/pipeline.png"
-                  alt="rénovation complète"
+                  alt="Plomberie"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Plomberie</h3>
@@ -350,7 +351,7 @@
                 <img
                   class="small-images"
                   src="./Images/kitchen.png"
-                  alt="rénovation complète"
+                  alt="Cuisine"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Cuisine</h3>
@@ -365,7 +366,7 @@
                 <img
                   class="small-images"
                   src="./Images/bath.png"
-                  alt="rénovation complète"
+                  alt="Salle de bain"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Salle de bain</h3>
@@ -380,7 +381,7 @@
                 <img
                   class="small-images"
                   src="./Images/garage.png"
-                  alt="rénovation complète"
+                  alt="Transformation de garage"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Transformation de garage</h3>
@@ -396,7 +397,7 @@
                 <img
                   class="small-images"
                   src="./Images/plastering.png"
-                  alt="rénovation complète"
+                  alt="Plafonnage"
                 />
                 <div>
                   <h3 class="fw-bold mb-0 fs-4">Plafonnage</h3>
@@ -417,7 +418,11 @@
             class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4"
           >
             <div class="col d-flex align-items-center">
-              <img class="small-images" src="./Images/form.png" alt="" />
+              <img
+                class="small-images"
+                src="./Images/form.png"
+                alt="Coffrage"
+              />
               <div>
                 <h3 class="fw-bold mb-0 fs-4">Coffrage</h3>
               </div>
@@ -436,7 +441,7 @@
               <img
                 class="small-images"
                 src="./Images/concrete-mixer.png"
-                alt="Maconnerie"
+                alt="Betonage"
               />
               <div>
                 <h3 class="fw-bold mb-0 fs-4">Betonage</h3>
@@ -446,7 +451,7 @@
               <img
                 class="small-images"
                 src="./Images/concrete.png"
-                alt="Maconnerie"
+                alt="Feraillage"
               />
               <div>
                 <h3 class="fw-bold mb-0 fs-4">Feraillage</h3>
@@ -568,12 +573,6 @@
               class="overlay-image"
               style="background-image: url(./Chantiers/chantier.jpeg)"
             ></div>
-            <!-- <div class="container carousel-container">
-              <h2>Chantier 2</h2>
-              <p>
-                Paragraph of text beneath the heading to explain the heading.
-              </p>
-            </div> -->
           </div>
           <div class="carousel-item">
             <div
@@ -655,7 +654,7 @@
             <img
               class="rounded-top-1"
               src="./Photos/Equipe/equipe.jpeg"
-              alt=""
+              alt="equipe severcofra"
             />
             <div class="card-body">
               <p class="card-text">
@@ -673,7 +672,7 @@
             <img
               class="rounded-top-1"
               src="./Photos/shaking-hands.jpeg"
-              alt=""
+              alt="allié de confiance"
             />
             <div class="card-body">
               <p class="card-text">
@@ -689,7 +688,11 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="rounded-top-1" src="./Photos/IMG_1012.jpeg" alt="" />
+            <img
+              class="rounded-top-1"
+              src="./Photos/IMG_1012.jpeg"
+              alt="construction durable"
+            />
             <div class="card-body">
               <p class="card-text">
                 <span class="fw-bold"
@@ -711,29 +714,42 @@
       <h2 class="border-bottom text-uppercase mb-5">Ils nous font confiance</h2>
       <div id="brands" class="row">
         <div class="col align-items-center">
-          <img src="./Images-brands/eloy.png" alt="eloy" height="80" />
+          <a href="https://www.eloy.be/"
+            ><img src="./Images-brands/eloy.png" alt="eloy logo" height="80"
+          /></a>
         </div>
         <div class="col">
-          <img src="./Images-brands/herpain.png" alt="eloy" height="80" />
+          <a href="https://herpain.be/en"
+            ><img
+              src="./Images-brands/herpain.png"
+              alt="herpain logo"
+              height="80"
+          /></a>
         </div>
         <div class="col">
-          <img src="./Images-brands/bam-galere.png" alt="" height="80" />
+          <a href="https://galere.be/"
+            ><img
+              src="./Images-brands/bam-galere.png"
+              alt="bam logo"
+              height="80"
+          /></a>
         </div>
         <div class="col">
-          <img
-            src="./Images-brands/louis-de-waele.png"
-            alt="eloy"
-            height="80"
-          />
+          <a href="https://www.louisdewaele.be/fr/construction/"
+            ><img
+              src="./Images-brands/louis-de-waele.png"
+              alt="louis de waele logo"
+              height="80"
+          /></a>
         </div>
         <div class="col">
-          <img src="./Images-brands/cit.png" alt="eloy" height="70" />
+          <a href="https://citblaton.be/fr"
+            ><img
+              src="./Images-brands/cit.png"
+              alt="cit blaton logo"
+              height="70"
+          /></a>
         </div>
-      </div>
-      <div class="row">
-        <!-- <div class="col-lg-3 col-sm-12">
-            <img src="./Images-brands/eloy.png" alt="eloy" height="30">
-          </div> -->
       </div>
     </div>
 
@@ -750,7 +766,21 @@
     </footer>
 
     <!----->
-
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "SEVERCOFRA",
+        "url": "https://www.severcofra.be",
+        "logo": "https://www.severcofra.be/Images/severcofra_s.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Customer Service",
+          "telephone": "+32 123 456 789",
+          "email": "info@severcofra.be"
+        }
+      }
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
