--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!---Section 'SEVERCOFRA' big-->
     <div id="accueil" class="container my-5">
       <div
-        class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
+        class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center border shadow-lg"
       >
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold intro">SEVERCOFRA</h1>
